Fix alignment issues left vs right side

--- a/style.css
+++ b/style.css
@@ -24,7 +24,9 @@ html {
     height: auto;
   }
 
-
+body {
+  font-family: Roboto,arial,sans-serif;
+}
   /* NAVIGATION BAR */
 
   nav {
@@ -34,6 +36,7 @@ html {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding: 10px;
   }
 
